--- a/InwardPolicy.Core.App/Views/Login/Login.cshtml
+++ b/InwardPolicy.Core.App/Views/Login/Login.cshtml
@@ -17,19 +17,64 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     @*<link href="~/css/Login.scss" rel="stylesheet">*@
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+
     <link href="~/css/Login.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     <style>
-        
-        
     </style>
+    @*<canvas></canvas>*@
+    <!--<div class="lines">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
 
+    </div>-->
+    @*<center><h1 id="Heading" class=" shadow  text-center mt-5 text-white">INWARD POLICY ENTRY SYSTEM</h1></center>*@
+    <!--<form id="form1" method="post" asp-action="CheckLogin">
+        <div class="container d-flex justify-content-center">
+            <div class="card shadow" style="width: 400px;">
+                <div class="card-body login">
+                    <h3 class="text-center mb-4">Login</h3>
+                    <div class="mb-3">
+                        @Html.Label("txtUserName", "User Id:", new { @id = "lblUserName", @class = "form-label col-form-label mb-0" })
+                        @Html.TextBoxFor(m => m.UserId, new { @id = "txtUserName", @maxlength = "12", @class = "form-control form-control" })
+                    </div>
+                    <div class="mb-3">
+                        @Html.Label("txtPassword", "Password:", new { @id = "lblPassword", @class = "form-label col-form-label mb-0" })
+                        @Html.PasswordFor(m => m.Password, new { @id = "txtPassword", @maxlength = "30", @class = "form-control form-control" })
+                    </div>
+                    <button ID="btnLogin" type="submit" class="btn btn-primary w-100">Login</button>
+                </div>
+            </div>
+        </div>
+    </form>-->
 
-
-    <center><h1 id="Heading" class=" shadow  text-center mt-5 text-white">INWARD POLICY ENTRY SYSTEM</h1></center>
-    <form id="form1" method="post" asp-action="CheckLogin" >
+    <div class="lines ">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+    @*<center><h1 id="Heading" class=" shadow  text-center mt-5 text-white">INWARD POLICY ENTRY SYSTEM</h1></center>*@
+    <form id="form1" method="post" asp-action="CheckLogin">
         <div class="container d-flex justify-content-center">
             <div class="card shadow" style="width: 400px;">
                 <div class="card-body login">
@@ -47,15 +92,23 @@
             </div>
         </div>
     </form>
+
+
+
+
     @*<form class="login">
-        <input type="text" placeholder="Username">
-        <input type="password" placeholder="Password">
-        <button>Login</button>
-    </form>*@
+            <input type="text" placeholder="Username">
+            <input type="password" placeholder="Password">
+            <button>Login</button>
+        </form>*@
 
     @*<a href="https://codepen.io/davinci/" target="_blank">check my other pens</a>*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    @*<script src="~/js/Login.js"></script>*@
+
+    <script>
+    </script>
 </body>
 </html>
 
