--- a/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
+++ b/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
@@ -11,10 +11,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link href="~/css/Layout.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link href="~/css/Layout.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 
     <!-- JS -->
     <script src="~/lib/jquery/jquery.min.js"></script> <!-- jQuery -->
@@ -23,37 +25,14 @@
     <script src="https://cdn.datatables.net/v/ju/dt-2.1.8/datatables.min.js"></script> <!-- DataTables -->
     <script src="https://cdn.datatables.net/colreorder/1.6.2/js/dataTables.colReorder.min.js"></script> <!-- ColReorder for DataTables -->
     <script src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
-    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
+    @*<script src="~/lib/sweetalert2/sweetalert2.min.js"></script>*@
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script> <!-- Custom JavaScript -->
+
 
 </head>
 <body style="width: 100vw; overflow-x:hidden;">
-    @*<header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-                <div class="container">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">InwardPolicy.Core.App</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
-        <div class="container">
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>*@
+    
 
     <!-- Full height container -->
     <div class="container-fluid fulldiv vh-100 m-0 p-0" style="overflow-y: auto; overflow-x: hidden; max-height: 100vh; ">
@@ -61,7 +40,7 @@
             <!-- Sidebar Column -->
             <div class="col-md-2 col-sm-2 sidebar  text-white p-3 h-100">
                 <h1>
-                    <a asp-controller="Dashboard" asp-action="Dashboard" asp-area=""  class="text-decoration-none text-reset">IPES</a>
+                    <a asp-controller="Dashboard" asp-action="Dashboard" asp-area="" class="text-decoration-none text-reset">IPES</a>
                 </h1>
                 <br />
 
@@ -70,10 +49,10 @@
                 <div style="min-height: 120px;">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="CodesMaster" asp-action="CodesMaster" >Codes Master</a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="CodesMaster" asp-action="CodesMaster">Codes Master</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" >Error Code Master</a>
+                            <a class="nav-link">Error Code Master</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Admin" asp-controller="UserMaster" asp-action="UserMaster">User Master</a>
@@ -88,7 +67,7 @@
                 <div style="min-height: 120px;">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="/Transaction/FirePolicyListing.aspx">Fire Policy</a>
+                            <a class="nav-link" asp-action="FirePolicy"  asp-controller="FirePolicy" asp-area="Transaction">Fire Policy</a>
                         </li>
 
                     </ul>
