--- a/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
+++ b/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                 <div style="min-height: 120px;">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="FirePolicy"  asp-controller="FirePolicy" asp-area="Transaction">Fire Policy</a>
+                            <a class="nav-link" asp-action="FirePolicyListing"  asp-controller="FirePolicyListing" asp-area="Transaction">Fire Policy</a>
                         </li>
 
                     </ul>
