--- a/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
+++ b/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
     <script src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
     @*<script src="~/lib/sweetalert2/sweetalert2.min.js"></script>*@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script> <!-- Custom JavaScript -->
 
 
